# asbackendcourse

./: .gitignore  hotels.py  main.py  pyproject.toml
src/: config.py  database.py  main.py
src/api/: dependencies.py  hotels.py
src/migrations/versions/: 2024_11_10_0036-bca65912df4c_add_rooms_hotels.py  935d62a57623_add_rooms_model.py  9efedbef37a8_initial_migration.py
src/models/: hotels.py  rooms.py
src/schemas/: hotels.py
